fixed gallery spacing

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -40,6 +40,9 @@ html {
 
 .gallery {
     height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .gallery img {
@@ -186,8 +189,11 @@ html.clicked {
     }
 
     .gallery img {
-        width: 50%;
-        padding: 20px;
+        width: 43%;
+        margin: 20px;
+        border-radius: 9px;
+        -webkit-box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.44);
+        box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.44);
     }
 
     .modal img {
